recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: identifier expected but ')' found.
  droit(90.)
           ^FourSquare:7: error: identifier expected but ')' found.
  droit(90.)
           ^FourSquare:9: error: identifier expected but ')' found.
  droit(90.)
           ^